# Sail

./: .gitignore  CMakeLists.txt
include/: archs.h  cli.h  common.h  defs.h  errors.h  evaluate.h  main.h  typedefs.h  types.h
include/backend/: ARMv7.h  bin.h  opearnd.h
include/backend/asm/: ARMv7.h  bin.h
include/backend/rtl/: rtl.h
include/datastructures/: hash_table.h  hashtable.h  stack.h  vector.h
include/debug/: debug.h  profiler.h
include/debug/tests/: libc.h  tester.h
include/frontend/c/: parser.h  preprocessor.h
include/frontend/common/: evaluate.h  parser.h  preprocessor.h  tokenizer.h
include/frontend/salmon/: parser.h  preprocessor.h  salmon.h  struct.h  types.h
include/std/c/: stdbool.h  stddef.h  stdio.h  stdlib.h  string.h  syscall.h
src/: RangeBasedProgramming.rs  archs.c  cli.c  common.c  errors.c  evaluate.c  main.c  types.c
src/backend/: ARMv7.c
src/backend/asm/: ARMv7.c
src/backend/rtl/: rtl.c
src/builtin/c/IEEE754/: binary32.c
src/datastructures/: hash_table.c  hashtable.c  stack.c  vector.c
src/debug/: debug.c  profiler.c
src/debug/tests/: libc.c  tester.c
src/frontend/c/: parser.c  preprocessor.c
src/frontend/common/: evaluate.c  parser.c  preprocessor.c  tokenizer.c
src/frontend/salmon/: parser.c  preprocessor.c  salmon.c  struct.c  types.c
src/std/c/: stdio.c  stdlib.c  string.c
tests/: 3n-1.sal  assignment.sal  fib.c  loop.sal  mul.sal  preprocessor.c  simple.sal  str.sal
